# clinfo

./: .gitignore  CMakeLists.txt
src/: clinfo.c
